Mon Mar 21 19:02:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/index.shtml:
          Playstation xampler results are not available anymore

Mon Mar 21 16:10:05 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          ACE_LACKS_THREAD_PROCESS_SCOPING is needed on LynxOS 4.2.

Mon Mar 21 15:15:52 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Also check DANCE_TRACE

Mon Mar 21 14:23:46 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-openbsd.h:
        * include/makeinclude/platform_openbsd.GNU:
          Improved support for OpenBSD.

Mon Mar 21 12:48:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/INET_Addr.cpp:
        * ace/OS_NS_netdb.h:
        * ace/OS_NS_netdb.inl:
        * ace/OS_NS_netdb.cpp:
        * ace/OS_NS_pwd.h:
        * ace/Ping_Socket.h:
        * ace/Process.cpp:
        * ace/ace_wchar.h:
        * ace/os_include/os_signal.h:
        * ace/os_include/os_stdio.h:
          Cleanup, removed lot of old VxWorks code not needed anymore

        * include/makeinclude/platform_sunos5_common.GNU:
          Add to the correct make flags

Sat Mar 19 15:01:11 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-linux-common.h:
          Removed this file.

        * ace/config-linux.h:
          Merged contents of config-linux-common.h to config-linux.h
          for easier maintenance.

        * ACE-INSTALL.html:
          Update ddue to changes above.

Sat Mar 19 14:57:04 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h:
          Improved support for LynxOS 4.2 and 5.0.

        * include/makeinclude/platform_lynxos.GNU:
          Removed unused SOBUILD variable.

Sat Mar 19 06:17:54 UTC 2011  Olli Savia  <ops@iki.fi>

        * examples/APG/ThreadSafety/Tokens.cpp:
          Fixes due to ACE rand_r() changes.

Fri Mar 18 05:21:08 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-lynxos.h: